force-app/main/default/objects/Case/fields/Work_Group__c.field-meta.xml
<CustomField>
    <fullName>Work_Group__c</fullName>
    <label>Work Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliates</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
            <value>
                <fullName>HelpDesk</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Order Processing</fullName>
            </value>
            <value>
                <fullName>Refund Approver</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Wellness Adv/Conc</fullName>
            </value>
            <value>
                <fullName>Admin Team</fullName>
                <isActive>false</isActive>
                <label>Admin Team</label>
            </value>
            <value>
                <fullName>CX Specialist</fullName>
                <isActive>false</isActive>
                <label>CX Specialist</label>
            </value>
            <value>
                <fullName>PSR</fullName>
                <isActive>false</isActive>
                <label>PSR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>