force-app/main/default/objects/Case/fields/Work_Group_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Work_Group_Ticket__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Group Ticket #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>