force-app/main/default/objects/Case/fields/ZenDeskId__c.field-meta.xml
<CustomField>
    <fullName>ZenDeskId__c</fullName>
    <description>The id of the case when the case lived in ZenDesk</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ZenDeskId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>