force-app/main/default/objects/Case/recordTypes/Customer_Experience.recordType-meta.xml
<RecordType>
    <fullName>Customer_Experience</fullName>
    <active>true</active>
    <businessProcess>Customer Experience Support Process</businessProcess>
    <label>Customer Experience</label>
</RecordType>