force-app/main/default/objects/Case/recordTypes/IT_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>IT_Record_Type</fullName>
    <active>true</active>
    <businessProcess>IT Support Process</businessProcess>
    <description>Represent a IT record type</description>
    <label>IT Record Type</label>
</RecordType>