force-app/main/default/objects/Case/recordTypes/Operations_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Operations_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Operations Support Process</businessProcess>
    <description>Represent a operations record type</description>
    <label>Operations Record Type</label>
</RecordType>