force-app/main/default/objects/Case/recordTypes/Patient_Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Patient_Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Patient Case Support Process</businessProcess>
    <description>Represents a patient case record type</description>
    <label>Patient Case Record Type</label>
</RecordType>