force-app/main/default/objects/Case/recordTypes/Patient_Demographic_Log.recordType-meta.xml
<RecordType>
    <fullName>Patient_Demographic_Log</fullName>
    <active>true</active>
    <businessProcess>Operations Support Process</businessProcess>
    <label>Patient Demographic Log</label>
</RecordType>