force-app/main/default/objects/Case/validationRules/Esc_Details_non_blank_on_Escalated_Dispo.validationRule-meta.xml
<ValidationRule>
    <fullName>Esc_Details_non_blank_on_Escalated_Dispo</fullName>
    <active>false</active>
    <description>The escalation details field must be populated when Dispo 3 is Escalated</description>
    <errorConditionFormula>AND(
    TEXT(Dispo_Level_3__c) = &quot;Escalation&quot;,
    ISBLANK( Escalation_Details__c )
)</errorConditionFormula>
    <errorDisplayField>Escalation_Details__c</errorDisplayField>
    <errorMessage>Please fill out escalation details for this case.</errorMessage>
</ValidationRule>