force-app/main/default/objects/Case/listViews/Alessia_s_cases.listView-meta.xml
<ListView>
    <fullName>Alessia_s_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Alessia Del Pozzo</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </filters>
    <label>Alessia&apos;s cases</label>
    <sharedTo>
        <role>VIP_Wellness_Assistant</role>
    </sharedTo>
</ListView>