force-app/main/default/objects/Case/listViews/All_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Closed Cases</label>
    <sharedTo>
        <role>CTO</role>
        <role>Information_Technology_Director</role>
        <role>Information_Technology_Manager</role>
        <role>Information_Technology_Staff</role>
        <role>Operations_Staff</role>
        <role>VIP_Office_Staff</role>
    </sharedTo>
</ListView>