force-app/main/default/objects/Case/listViews/All_Incomplete_Patient_Cases.listView-meta.xml
<ListView>
    <fullName>All_Incomplete_Patient_Cases</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Operations Queue</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Patient_Case_Record_Type</value>
    </filters>
    <label>All Incomplete Patient Cases</label>
</ListView>