force-app/main/default/objects/Case/listViews/All_New_PAM_cases.listView-meta.xml
<ListView>
    <fullName>All_New_PAM_cases</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Resolution_Type__c</columns>
    <columns>Case_Resolution_Reason__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Patient_Case_Record_Type</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All New PAM cases</label>
    <queue>Patient_Account_Management</queue>
</ListView>