force-app/main/default/objects/Case/listViews/Closed_Patient_Account_Management_Queue.listView-meta.xml
<ListView>
    <fullName>Closed_Patient_Account_Management_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Case_Resolution_Type__c</columns>
    <columns>Case_Resolution_Reason__c</columns>
    <columns>Case_Age_in_Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Patient_Case_Record_Type</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Patient Account Managemet,dcres,sarda,jpint,npasa,msall,ijean,hlana,Earth,NCort,mcapu,rcata,mmaym,gagui,rguev</value>
    </filters>
    <label>Closed Patient Account Management Queue</label>
    <sharedTo>
        <role>VIP_Office_Staff</role>
    </sharedTo>
</ListView>