force-app/main/default/objects/Case/listViews/Copy_of_Open_Patient_Account_Management_Queue.listView-meta.xml
<ListView>
    <fullName>Copy_of_Open_Patient_Account_Management_Queue</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Resolution_Type__c</columns>
    <columns>Case_Resolution_Reason__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Patient_Case_Record_Type</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,On Hold,Escalated</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Payment Record Reconciliation</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Clinical Note Locked Event</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>PatientNotFoundInDrChrono</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>OrphanGeneTest</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>New Biocanic Account</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Patient Information Reconciliation. Error Code</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>equals</operation>
        <value>Patient Information Reconciliation</value>
    </filters>
    <label>Nelsah&apos;s PAM Cases to Resolve</label>
    <queue>Patient_Account_Management</queue>
    <sharedTo>
        <role>VIP_Office_Staff</role>
    </sharedTo>
</ListView>