force-app/main/default/objects/Case/listViews/Customer_Success_Team_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Success_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Customer_Response_Pending__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Case_Elapsed_Time__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Dispo_Level_1__c</columns>
    <columns>Dispo_Level_2__c</columns>
    <columns>Dispo_Level_3__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Hashtag__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Customer_Experience</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Customer Experience</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>