force-app/main/default/objects/Case/listViews/Lab_Order_Cases.listView-meta.xml
<ListView>
    <fullName>Lab_Order_Cases</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Resolution_Type__c</columns>
    <columns>Case_Resolution_Reason__c</columns>
    <columns>Case_Age_in_Days__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,On Hold,Escalated</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Patient_Case_Record_Type</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Lab</value>
    </filters>
    <label>Lab Order Cases</label>
    <queue>Patient_Account_Management</queue>
</ListView>