force-app/main/default/objects/Case/listViews/Madi_CX_cases.listView-meta.xml
<ListView>
    <fullName>Madi_CX_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>Case_Elapsed_Time__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Dispo_Level_1__c</columns>
    <columns>Dispo_Level_2__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Hashtag__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Customer_Experience</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Madi - CX cases</label>
</ListView>