force-app/main/default/objects/Case/listViews/Missing_Dr_Chrono_Account_Check_list.listView-meta.xml
<ListView>
    <fullName>Missing_Dr_Chrono_Account_Check_list</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Resolution_Type__c</columns>
    <columns>Case_Resolution_Reason__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Patient_Case_Record_Type</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Working,On Hold,Escalated</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>DrChrono,Dr Chrono</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>Clinical Note Locked Event</value>
    </filters>
    <filters>
        <field>Case_Resolution_Type__c</field>
        <operation>equals</operation>
        <value>Chrono Not Synced,Incorrect Patient Demographic,Missing Patient Demographic,Not Found in EHR (Dr Chrono),Other</value>
    </filters>
    <label>Missing Dr Chrono Account Check list</label>
    <queue>Patient_Account_Management</queue>
</ListView>